--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicOffline">
-        <activity android:name=".ui.PlayListActivity"></activity>
+        <activity android:name=".ui.playlist.PlayListActivity"></activity>
         <activity android:name=".ui.playmusic.PlayActivity" />
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.main.SplashActivity">
