--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicOffline">
-        <activity android:name=".ui.searchdetail.DetailSearchActivity"
-                android:screenOrientation="portrait"/>
-        <activity android:name=".ui.playlist.PlayListDetailActivity"
-                android:screenOrientation="portrait"/>
-        <activity android:name=".ui.playmusic.PlayActivity"
-                android:screenOrientation="portrait"/>
-        <activity android:name=".ui.main.MainActivity"
-                android:screenOrientation="portrait"/>
-        <activity android:name=".ui.main.SplashActivity"
-                android:screenOrientation="portrait">
+        <activity android:name=".ui.albumdetail.AlbumDetailActivity"></activity>
+        <activity
+            android:name=".ui.searchdetail.DetailSearchActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.playlist.PlayListDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.playmusic.PlayActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.main.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,11 +41,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".broadcast.NotificationActionService"
-                android:screenOrientation="portrait"/>
+        <receiver
+            android:name=".broadcast.NotificationActionService"
+            android:screenOrientation="portrait" />
 
-        <service android:name=".service.PlayMusicService"
-                android:screenOrientation="portrait"/>
+        <service
+            android:name=".service.PlayMusicService"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
